--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,219 @@
-tensorflow
+absl-py==0.15.0
+alembic==1.7.7
+anyio==3.5.0
+apache-beam==2.38.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.4.0
+autopage==0.5.0
+Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.10.0
+black==22.3.0
+bleach==4.1.0
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+clang==5.0
+click==8.1.2
+cliff==3.10.1
+cloudpickle==2.0.0
+cmaes==0.8.2
+cmd2==2.4.0
+colorlog==6.6.0
+crcmod==1.7
+cycler==0.11.0
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+dill==0.3.1.1
+dm-tree==0.1.6
+docopt==0.6.2
+edward2==0.0.2
+einops==0.4.1
+entrypoints==0.4
+executing==0.8.3
+fastavro==1.4.11
+fasteners==0.17.3
+fastjsonschema==2.15.3
+ffmpeg-python==0.2.0
+filelock==3.6.0
+flatbuffers==1.12
+fonttools==4.31.2
+future==0.18.2
+gast==0.4.0
+google-api-core==2.7.3
+google-api-python-client==1.12.11
+google-apitools==0.5.31
+google-auth==2.6.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+google-cloud-bigquery==2.34.3
+google-cloud-bigquery-storage==2.13.1
+google-cloud-bigtable==1.7.1
+google-cloud-core==1.7.2
+google-cloud-datastore==1.15.4
+google-cloud-dlp==3.6.2
+google-cloud-language==1.3.1
+google-cloud-pubsub==2.12.0
+google-cloud-pubsublite==1.4.2
+google-cloud-recommendations-ai==0.2.0
+google-cloud-spanner==1.19.2
+google-cloud-videointelligence==1.16.2
+google-cloud-vision==1.0.1
+google-crc32c==1.3.0
+google-pasta==0.2.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
+graphviz==0.20
+greenlet==1.1.2
+grpc-google-iam-v1==0.12.4
+grpcio==1.43.0
+grpcio-gcp==0.2.2
+grpcio-status==1.46.0
+h5py==3.1.0
+hdfs==2.7.0
+httplib2==0.19.1
+idna==3.3
+imageio==2.19.1
+imageio-ffmpeg==0.4.7
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+ipykernel==6.12.1
+ipympl==0.8.8
+ipython==8.2.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+jedi==0.18.1
+Jinja2==3.1.1
+joblib==0.14.1
+json5==0.9.6
+jsonschema==4.4.0
+jupyter-client==7.2.1
+jupyter-core==4.9.2
+jupyter-server==1.16.0
+jupyterlab==3.3.2
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.12.0
+jupyterlab-widgets==1.1.0
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
+libclang==13.0.0
+Mako==1.2.0
+Markdown==3.3.6
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+msgpack==1.0.3
+mypy-extensions==0.4.3
+nbclassic==0.3.7
+nbclient==0.5.13
+nbconvert==6.4.5
+nbformat==5.3.0
+nest-asyncio==1.5.5
+networkx==2.8
+notebook==6.4.10
+notebook-shim==0.1.0
+numpy==1.19.5
+oauth2client==4.1.3
+oauthlib==3.2.0
+opencv-python==4.5.5.64
+opt-einsum==3.3.0
+optuna==2.10.0
+orjson==3.6.8
+overrides==6.1.0
+packaging==21.3
+pandas==1.4.2
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.9.0
+pbr==5.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.0
+platformdirs==2.5.1
+prettytable==3.2.0
+prometheus-client==0.14.0
+promise==2.3
+prompt-toolkit==3.0.29
+proto-plus==1.20.3
+protobuf==3.20.0
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==5.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydot==1.4.2
+pydot-ng==2.0.0
+pyfarmhash==0.3.2
+Pygments==2.11.2
+pymongo==3.12.3
+pyparsing==2.4.2
+pyperclip==1.8.2
+pyprojroot==0.2.0
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytz==2022.1
+PyWavelets==1.3.0
+PyYAML==6.0
+pyzmq==22.3.0
+ray==1.11.0
+redis==4.2.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scenedetect==0.5.6.1
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scikit-video==1.1.11
+scipy==1.8.0
+Send2Trash==1.8.0
+six==1.15.0
+sklearn==0.0
+sniffio==1.2.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.35
+stack-data==0.2.0
+stevedore==3.5.0
+tabulate==0.8.9
+tensorboard==2.9.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.7.0
+tensorflow-addons==0.16.1
+tensorflow-datasets==4.5.2
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.25.0
+tensorflow-metadata==1.7.0
+termcolor==1.1.0
+terminado==0.13.3
+testpath==0.6.0
+threadpoolctl==3.1.0
+tifffile==2022.5.4
+tomli==2.0.1
+torch==1.11.0
+torchvision==0.12.0
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+typeguard==2.13.3
+typing-extensions==4.2.0
+typing-utils==0.1.0
+uritemplate==3.0.1
+urllib3==1.26.9
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.2
+Werkzeug==2.1.1
+widgetsnbextension==3.6.0
+wrapt==1.12.1
+zipp==3.8.0
