--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -6,9 +6,14 @@ model:
   autoencoder_config:
     z_channels: 128
     channels: 128
-    channels_multiplier: [1,1,2,2]
+    channels_multiplier: 
+    - 1
+    - 1 
+    - 2
+    - 2
     num_res_blocks: 1
-    attention_resolution: [16]
+    attention_resolution: 
+    - 16
     resolution: 128
     dropout: 0.0
   discriminator_config:
