Update docker files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - "./:/GANime"
     ports:
       - "8888:8888"
+    # command: jupyter lab --allow-root --ip="*" --token=easy
+    command: jupyter nbconvert --execute --to notebook /GANime/notebooks/model/vq-gan/vq-gan.ipynb
     deploy:
       resources:
         reservations:
