Add ffmpeg to docker container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,9 @@ services:
       - "./:/GANime"
     ports:
       - "8888:8888"
-    # command: jupyter lab --allow-root --ip="*" --token=easy
-    command: jupyter nbconvert --execute --to notebook /GANime/notebooks/model/vq-gan/vq-gan.ipynb
+      - "8889:8889"
+    command: jupyter lab --allow-root --ip="*" --token=easy
+    #command: jupyter nbconvert --execute --to notebook /GANime/notebooks/model/vq-gan/min_gpt.ipynb
     deploy:
       resources:
         reservations:
