--- a/requirements.txt
+++ b/requirements.txt
@@ -124,6 +124,7 @@ notebook-shim==0.1.0
 numpy==1.19.5
 oauth2client==4.1.3
 oauthlib==3.2.0
+omegaconf
 opencv-python==4.5.5.64
 opt-einsum==3.3.0
 optuna==2.10.0
