--- a/configs/moving_mnist_image_transformer.yaml
+++ b/configs/moving_mnist_image_transformer.yaml
@@ -2,13 +2,13 @@ model:
   transformer_config:
     vocab_size: 512
     block_size: 512
-    n_layer: 16
+    n_layer: 24
     n_head: 16
-    n_embedding: 512
+    n_embedding: 1024
     embedding_percentage_drop: 0.1
     attention_percentage_drop: 0.1
   first_stage_config:
-    checkpoint_path: ~/GANime/checkpoints/mnist_image/checkpoint
+    checkpoint_path: ../../../checkpoints/mnist_image/checkpoint
     vqvae_config:
       beta: 0.25
       num_embeddings: 128
@@ -39,7 +39,7 @@ model:
       vqvae:
         codebook_weight: 1.0
   cond_stage_config:
-    checkpoint_path: ~/GANime/checkpoints/mnist_image/checkpoint
+    checkpoint_path: ../../../checkpoints/mnist_image/checkpoint
     vqvae_config:
       beta: 0.25
       num_embeddings: 128
