--- a/configs/moving_mnist_image_transformer_huggingface.yaml
+++ b/configs/moving_mnist_image_transformer_huggingface.yaml
@@ -1,5 +1,6 @@
 model:
   transformer_config:
+    checkpoint_path: ../../../checkpoints/mnist_animated/checkpoint
     vocab_size: 50257
     n_positions: 1024
     n_embd: 1024 #1280 #768
