Correction of some problems with the VQ-GAN (added sigmoid)

--- a/configs/kny_image.yaml
+++ b/configs/kny_image.yaml
@@ -1,7 +1,25 @@
 model:
-  checkpoint_path: ../../../checkpoints/kny_image/checkpoint
+  # checkpoint_path: ../../../checkpoints/kny_image/checkpoint
   vqvae_config:
     beta: 0.25
+  #   num_embeddings: 128
+  #   embedding_dim: 128
+  # autoencoder_config:
+  #   z_channels: 128
+  #   channels: 128
+  #   channels_multiplier: 
+  #   - 1
+  #   - 1 
+  #   - 2
+  #   - 2
+  #   num_res_blocks: 1
+  #   attention_resolution: 
+  #   - 16
+  #   resolution: 128
+  #   dropout: 0.0
+  # discriminator_config:
+  #   num_layers: 3
+  #   filters: 64
     num_embeddings: 256
     embedding_dim: 1024
   autoencoder_config:
@@ -13,7 +31,7 @@ model:
     - 2
     - 2
     - 4
-    num_res_blocks: 2
+    num_res_blocks: 1
     attention_resolution: 
     - 16
     resolution: 128
