--- a/requirements.txt
+++ b/requirements.txt
@@ -188,6 +188,7 @@ stack-data==0.2.0
 stevedore==3.5.0
 tabulate==0.8.9
 tensorboard==2.9.0
+tensorboardx
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.7.0
