--- a/configs/kny_transformer_light.yaml
+++ b/configs/kny_transformer_light.yaml
@@ -1,6 +1,6 @@
 model:
   transformer_config:
-    # checkpoint_path: ../../../checkpoints/moving_mnist_gpt_medium/checkpoint
+    checkpoint_path: ../../../checkpoints/kny_videos_light/checkpoint
     vocab_size: 50257
     n_positions: 1024
     n_embd: 1024 #1280 #768
@@ -44,7 +44,7 @@ model:
 
 train:
   batch_size: 8
-  n_epochs: 100
+  n_epochs: 3000
   len_x_train: 631
   warmup_epoch_percentage: 0.15
   lr_start: 1e-5
