Add frame masking and stop using ground truth after n epochs

--- a/configs/kny_transformer_light.yaml
+++ b/configs/kny_transformer_light.yaml
@@ -44,10 +44,11 @@ model:
 
 train:
   batch_size: 8
-  n_epochs: 200
+  n_epochs: 2000
   len_x_train: 631
   warmup_epoch_percentage: 0.15
   lr_start: 1e-5
   lr_max: 2.5e-4
   perceptual_loss_weight: 1.0
   n_frames_before: 5
+  stop_ground_truth_after_epoch: 100
