--- a/configs/kny_image.yaml
+++ b/configs/kny_image.yaml
@@ -48,42 +48,18 @@ model:
       weight: 0.3
     vqvae:
       codebook_weight: 1.0
+      perceptual_weight: 1.0
 
 trainer:
   batch_size: 16
-
-# model:
-#   # checkpoint_path: ../../../checkpoints/mnist_image_fp16/checkpoint
-#   vqvae_config:
-#     beta: 0.25
-#     num_embeddings: 256
-#     embedding_dim: 1024
-#   autoencoder_config:
-#     z_channels: 256
-#     channels: 128
-#     channels_multiplier: 
-#     - 1
-#     - 1 
-#     - 2
-#     - 2
-#     - 4
-#     num_res_blocks: 2
-#     attention_resolution: 
-#     - 16
-#     resolution: 64
-#     dropout: 0.0
-#   discriminator_config:
-#     num_layers: 3
-#     filters: 64
-    
-#   loss_config:
-#     discriminator:
-#       loss: "hinge"
-#       factor: 1.0
-#       iter_start: 625000
-#       weight: 0.3
-#     vqvae:
-#       codebook_weight: 1.0
+  gen_lr: 5e-4
+  disc_lr: 5e-5
+  gen_beta_1: 0.5
+  gen_beta_2: 0.9
+  disc_beta_1: 0.5
+  disc_beta_2: 0.9
+  gen_clip_norm: 1.0
+  disc_clip_norm: 1.0
 
 
 
