--- a/configs/kny_image.yaml
+++ b/configs/kny_image.yaml
@@ -2,40 +2,20 @@ model:
   # checkpoint_path: ../../../checkpoints/kny_image/checkpoint
   vqvae_config:
     beta: 0.25
-  #   num_embeddings: 128
-  #   embedding_dim: 128
-  # autoencoder_config:
-  #   z_channels: 128
-  #   channels: 128
-  #   channels_multiplier: 
-  #   - 1
-  #   - 1 
-  #   - 2
-  #   - 2
-  #   num_res_blocks: 1
-  #   attention_resolution: 
-  #   - 16
-  #   resolution: 128
-  #   dropout: 0.0
-  # discriminator_config:
-  #   num_layers: 3
-  #   filters: 64
-    num_embeddings: 256
-    embedding_dim: 1024
+    num_embeddings: 16384
+    embedding_dim: 256
   autoencoder_config:
     z_channels: 256
-    channels: 256
+    channels: 32
     channels_multiplier: 
-    - 1
-    - 1 
-    - 2
-    - 2
     - 4
+    - 8 
+    - 8
     num_res_blocks: 1
     attention_resolution: 
     - 16
     resolution: 128
-    dropout: 0.0
+    dropout: 0.1
   discriminator_config:
     num_layers: 3
     filters: 64
@@ -44,22 +24,21 @@ model:
     discriminator:
       loss: "hinge"
       factor: 1.0
-      iter_start: 625000
-      weight: 0.3
+      iter_start: 42500
+      weight: 1.0
     vqvae:
       codebook_weight: 1.0
-      perceptual_weight: 1.0
+      perceptual_weight: 4.0
+    perceptual_loss: "style" # "vgg16", "vgg19", "style"
 
 trainer:
-  batch_size: 16
-  gen_lr: 5e-4
-  disc_lr: 5e-5
+  batch_size: 8
+  gen_lr: 3e-5
+  disc_lr: 3e-5
   gen_beta_1: 0.5
   gen_beta_2: 0.9
   disc_beta_1: 0.5
   disc_beta_2: 0.9
   gen_clip_norm: 1.0
   disc_clip_norm: 1.0
-
-
 
