Test with style, vgg16 and vgg19 loss

--- a/configs/kny_image_vgg19.yaml
+++ b/configs/kny_image_vgg19.yaml
@@ -1,16 +1,17 @@
 model:
-  # checkpoint_path: ../../../checkpoints/kny_image_vgg19/checkpoint
   vqvae_config:
     beta: 0.25
-    num_embeddings: 50257
+    num_embeddings: 128
     embedding_dim: 256
   autoencoder_config:
-    z_channels: 256
-    channels: 32
+    z_channels: 128
+    channels: 64
     channels_multiplier: 
+    - 1
+    - 1 
+    - 2
+    - 2
     - 4
-    - 8 
-    - 8
     num_res_blocks: 1
     attention_resolution: 
     - 16
@@ -24,7 +25,7 @@ model:
     discriminator:
       loss: "hinge"
       factor: 1.0
-      iter_start: 53000
+      iter_start: 1000000000
       weight: 1.0
     vqvae:
       codebook_weight: 1.0
@@ -32,8 +33,8 @@ model:
     perceptual_loss: "vgg19" # "vgg16", "vgg19", "style"
 
 trainer:
-  batch_size: 32
-  n_epochs: 2000
+  batch_size: 64
+  n_epochs: 10000
   gen_lr: 3e-5
   disc_lr: 3e-5
   gen_beta_1: 0.5
