--- a/configs/kny_image_full_vgg19.yaml
+++ b/configs/kny_image_full_vgg19.yaml
@@ -1,5 +1,5 @@
 model:
-  checkpoint_path: ../../../checkpoints/kny_image_full/checkpoint
+  # checkpoint_path: ../../../checkpoints/kny_image_full/checkpoint
   vqvae_config:
     beta: 0.25
     num_embeddings: 50257
@@ -25,7 +25,7 @@ model:
     discriminator:
       loss: "hinge"
       factor: 1.0
-      iter_start: 5000
+      iter_start: 50000000
       weight: 0.8
     vqvae:
       codebook_weight: 1.0
@@ -35,8 +35,8 @@ model:
 trainer:
   batch_size: 32
   n_epochs: 10000
-  gen_lr: 2e-4
-  disc_lr: 2e-4
+  gen_lr: 5e-5
+  disc_lr: 5e-5
   gen_beta_1: 0.5
   gen_beta_2: 0.9
   disc_beta_1: 0.5
