--- a/configs/kny_image_full_vgg19.yaml
+++ b/configs/kny_image_full_vgg19.yaml
@@ -1,5 +1,5 @@
 model:
-  # checkpoint_path: ../../../checkpoints/kny_image_full/checkpoint
+  checkpoint_path: ../../../checkpoints/kny_image_full_vgg19/checkpoint
   vqvae_config:
     beta: 0.25
     num_embeddings: 50257
@@ -33,9 +33,9 @@ model:
     perceptual_loss: "vgg19" # "vgg16", "vgg19", "style"
 
 trainer:
-  batch_size: 32
+  batch_size: 64
   n_epochs: 10000
-  gen_lr: 5e-5
+  gen_lr: 3e-5
   disc_lr: 5e-5
   gen_beta_1: 0.5
   gen_beta_2: 0.9
