--- a/configs/kny_video_gpt2_medium.yaml
+++ b/configs/kny_video_gpt2_medium.yaml
@@ -1,6 +1,6 @@
 model:
   transformer_config:
-    checkpoint_path: ../../../checkpoints/moving_mnist_video/checkpoint
+    # checkpoint_path: ../../../checkpoints/kny_video_full_gpt2_xl/checkpoint
     remaining_frames_method: "own_embeddings"
     transformer_type: "gpt2-medium"
   first_stage_config:
@@ -38,13 +38,13 @@ model:
       perceptual_loss: "vgg19"
 
 train:
-  batch_size: 16
+  batch_size: 64
   accumulation_size: 1
-  n_epochs: 2000
-  len_x_train: 8000
+  n_epochs: 500
+  len_x_train: 28213
   warmup_epoch_percentage: 0.15
-  lr_start: 1e-5
-  lr_max: 2.5e-4
+  lr_start: 5e-6
+  lr_max: 1e-4
   perceptual_loss_weight: 1.0
   n_frames_before: 5
-  stop_ground_truth_after_epoch: 500
+  stop_ground_truth_after_epoch: 200
