Various tests and retrain at 256x512 resolution

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,4 @@ notebooks/model/vq-gan/train_output/*
 notebooks/model/vq-gan/validation_output/*
 notebooks/model/vq-gan/test_output/*
 *.zip
+flagged/*
