--- a/configs/kny_video_gpt2_large.yaml
+++ b/configs/kny_video_gpt2_large.yaml
@@ -1,6 +1,6 @@
 model:
   transformer_config:
-    checkpoint_path: ../../../checkpoints/kny_video_full_gpt2_large/checkpoint
+    # checkpoint_path: ../../../checkpoints/kny_video_full_gpt2_large/checkpoint
     remaining_frames_method: "own_embeddings"
     transformer_type: "gpt2-large"
   first_stage_config:
@@ -40,11 +40,11 @@ model:
 train:
   batch_size: 64
   accumulation_size: 1
-  n_epochs: 2000
+  n_epochs: 500
   len_x_train: 28213
   warmup_epoch_percentage: 0.15
   lr_start: 1e-5
   lr_max: 2.5e-4
   perceptual_loss_weight: 1.0
-  n_frames_before: 1
-  stop_ground_truth_after_epoch: 50
+  n_frames_before: 5
+  stop_ground_truth_after_epoch: 100
