--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,12 @@ scikit-image==0.19.2
 scenedetect==0.5.6.1
 transformers
 tqdm
+jupyterlab==3.3.2
+typing-extensions>=4.1.0
+pyprojroot
+torch
+torch-vision
+gradio
+opencv-python
+joblib
+sk-video
