--- a/configs/kny_video_gpt2_large_gradio.yaml
+++ b/configs/kny_video_gpt2_large_gradio.yaml
@@ -1,27 +1,26 @@
 model:
   transformer_config:
-    # checkpoint_path: ../../../checkpoints/kny_video_light_gpt2_large_256/checkpoint
+    checkpoint_path: ./checkpoints/kny_video_full_gpt2_large_final/checkpoint
     remaining_frames_method: "own_embeddings"
     transformer_type: "gpt2-large"
   first_stage_config:
-    checkpoint_path: ../../../checkpoints/kny_image_light_256_larger_disc/checkpoint
+    checkpoint_path: ./checkpoints/kny_image_full_vgg19/checkpoint
     vqvae_config:
       beta: 0.25
       num_embeddings: 50257
-      embedding_dim: 256
+      embedding_dim: 128
     autoencoder_config:
-      z_channels: 256
-      channels: 128
+      z_channels: 512
+      channels: 32
       channels_multiplier: 
-      - 1
-      - 1
       - 2
-      - 2
-      - 2
+      - 4
+      - 8
+      - 8
       num_res_blocks: 1
       attention_resolution: 
-      - #16
-      resolution: 256
+      - 16
+      resolution: 128
       dropout: 0.0
     discriminator_config:
       num_layers: 3
@@ -31,18 +30,18 @@ model:
       discriminator:
         loss: "hinge"
         factor: 1.0
-        iter_start: 500000
-        weight: 0.8
+        iter_start: 16200
+        weight: 0.3
       vqvae:
         codebook_weight: 1.0
         perceptual_weight: 4.0
-      perceptual_loss: "vgg19" # "vgg16", "vgg19", "style"
+      perceptual_loss: "vgg19"
 
 train:
   batch_size: 64
   accumulation_size: 1
   n_epochs: 10000
-  len_x_train: 789
+  len_x_train: 28213
   warmup_epoch_percentage: 0.15
   lr_start: 1e-5
   lr_max: 2.5e-4
