--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,189 @@
+# absl-py==0.15.0
+# aiohttp==3.8.3
+# aiosignal==1.2.0
+# antlr4-python3-runtime==4.9.3
+# anyio==3.6.1
+# argon2-cffi==21.1.0
+# astunparse==1.6.3
+# async-timeout==4.0.2
+# attrs==21.2.0
+# Babel==2.10.3
+# backcall==0.2.0
+# bcrypt==4.0.1
+# beautifulsoup4==4.11.1
+# bleach==4.1.0
+# cachetools==4.2.4
+# certifi==2019.11.28
+# cffi==1.15.0
+# chardet==3.0.4
+# charset-normalizer==2.1.1
+# click==8.1.3
+# cryptography==38.0.1
+# cycler==0.11.0
+# dbus-python==1.2.16
+# debugpy==1.5.1
+# decorator==5.1.0
+# defusedxml==0.7.1
+# Deprecated==1.2.13
+# entrypoints==0.3
+# fastapi==0.85.0
+# fastjsonschema==2.16.2
+# ffmpegio==0.7.0
+# ffmpegio-core==0.7.0
+# ffmpy==0.3.0
+# filelock==3.8.0
+# flatbuffers==2.0
+# fonttools==4.37.4
+# frozenlist==1.3.1
+# fsspec==2022.8.2
+# gast==0.4.0
+# google-auth==2.3.3
+# google-auth-oauthlib==0.4.6
+# google-pasta==0.2.0
+# gradio==3.4.1
+# grpcio==1.41.1
+# h11==0.12.0
+# h5py==3.5.0
+# httpcore==0.15.0
+# httpx==0.23.0
+# huggingface-hub==0.10.1
+# idna==2.8
+# imageio==2.22.1
+# importlib-metadata==5.0.0
+# importlib-resources==5.4.0
+# ipykernel==5.1.1
+# ipython==7.29.0
+# ipython-genutils==0.2.0
+# ipywidgets==7.6.5
+# jedi==0.17.2
+# Jinja2==3.0.2
+# joblib==1.2.0
+# json5==0.9.10
+# jsonschema==4.2.0
+# jupyter==1.0.0
+# jupyter-client==7.0.6
+# jupyter-console==6.4.0
+# jupyter-core==4.9.1
+# jupyter-http-over-ws==0.0.8
+# jupyter-server==1.21.0
+# jupyterlab==3.3.2
+# jupyterlab-pygments==0.1.2
+# jupyterlab-server==2.16.0
+# jupyterlab-widgets==1.0.2
+# keras==2.7.0
+# Keras-Preprocessing==1.1.2
+# kiwisolver==1.3.2
+# libclang==12.0.0
+# linkify-it-py==1.0.3
+# Markdown==3.3.4
+# markdown-it-py==2.1.0
+# MarkupSafe==2.0.1
+# matplotlib==3.5.1
+# matplotlib-inline==0.1.3
+# mdit-py-plugins==0.3.1
+# mdurl==0.1.2
+# mistune==2.0.4
+# msgpack==1.0.4
+# multidict==6.0.2
+# nbclassic==0.4.6
+# nbclient==0.5.4
+# nbconvert==7.2.1
+# nbformat==5.7.0
+# nest-asyncio==1.5.1
+# networkx==2.8.7
+# notebook==6.4.5
+# notebook-shim==0.1.0
+# numpy==1.21.3
+# oauthlib==3.1.1
+# omegaconf==2.2.3
+# opencv-python==4.6.0.66
+# opt-einsum==3.3.0
+# orjson==3.8.0
+# packaging==21.2
+# pandas==1.5.0
+# pandocfilters==1.5.0
+# paramiko==2.11.0
+# parso==0.7.1
+# pexpect==4.8.0
+# pickleshare==0.7.5
+# Pillow==8.4.0
+# pluggy==1.0.0
+# prometheus-client==0.12.0
+# prompt-toolkit==3.0.22
+# protobuf==3.19.1
+# ptyprocess==0.7.0
+# pyasn1==0.4.8
+# pyasn1-modules==0.2.8
+# pycparser==2.20
+# pycryptodome==3.15.0
+# pydantic==1.10.2
+# pydub==0.25.1
+# Pygments==2.10.0
+# PyGObject==3.36.0
+# PyNaCl==1.5.0
+# pyparsing==2.4.7
+# pyprojroot==0.2.0
+# pyrsistent==0.18.0
+# python-apt==2.0.0+ubuntu0.20.4.8
+# python-dateutil==2.8.2
+# python-multipart==0.0.5
+# pytz==2022.4
+# PyWavelets==1.4.1
+# PyYAML==6.0
+# pyzmq==22.3.0
+# qtconsole==5.1.1
+# QtPy==1.11.2
+# ray==1.11.0
+# redis==4.3.4
+# regex==2022.9.13
+# requests==2.22.0
+# requests-oauthlib==1.3.0
+# requests-unixsocket==0.2.0
+# rfc3986==1.5.0
+# rsa==4.7.2
+# scenedetect==0.5.6.1
+# scikit-image==0.19.2
+# scipy==1.9.2
+# Send2Trash==1.8.0
+# six==1.14.0
+# sk-video==1.1.10
+# sniffio==1.3.0
+# soupsieve==2.3.2.post1
+# starlette==0.20.4
+# tensorboard==2.7.0
+# tensorboard-data-server==0.6.1
+# tensorboard-plugin-wit==1.8.0
+# tensorflow==2.7.0
+# tensorflow-addons==0.18.0
+# tensorflow-estimator==2.7.0
+# tensorflow-io-gcs-filesystem==0.21.0
+# termcolor==1.1.0
+# terminado==0.12.1
+# testpath==0.5.0
+# tifffile==2022.10.10
+# tinycss2==1.1.1
+# tokenizers==0.13.1
+# torch==1.12.1
+# torch-vision==0.1.6.dev0
+# tornado==6.1
+# tqdm==4.64.1
+# traitlets==5.1.1
+# transformers==4.23.1
+# typeguard==2.13.3
+# typing-extensions==4.4.0
+# uc-micro-py==1.0.1
+# urllib3==1.25.8
+# uvicorn==0.18.3
+# wcwidth==0.2.5
+# webencodings==0.5.1
+# websocket-client==1.4.1
+# websockets==10.3
+# Werkzeug==2.0.2
+# widgetsnbextension==3.5.2
+# wrapt==1.13.3
+# yarl==1.8.1
+# zipp==3.6.0
+
 tensorflow==2.7.0
 tensorflow-addons
 matplotlib==3.5.1
@@ -16,3 +202,5 @@ gradio
 opencv-python
 joblib
 sk-video
+ffmpegio
+h11==0.12.0
